# OceanRendering

./: .gitignore  CMakeLists.txt
cmake/: Findglfw3.cmake
shaders/: seaFragShader.glsl  seaVertShader.glsl  skyColor.glsl  skyFragShader.glsl  skyVertShader.glsl
src/: camera.cpp  camera.h  config.h  glad.c  main.cpp  sea.cpp  sea.h  shader_loader.cpp  shader_loader.h  sky.cpp  sky.h  triangle_mesh.cpp  triangle_mesh.h
